Agregando el menú responsive

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <header class="site-header inicio">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <a href="/">
+                <a href="/" class="logo">
                     <img src="img/logo.svg" alt="Logotipo de Bienes Raíces" />
                 </a>
 
-                <div class="mobile-menu">
-                    <a href="#navegacion">
-                        <img src="img/barras.svg" alt="Imagen Menú">
-                    </a>
+                <div class="menu-movil">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
 
                 <nav id="navegacion" class="navegacion">
@@ -172,11 +172,11 @@
     </main>
 
     <section class="imagen-contacto">
-        <div class="contenedor contenido-contacto">
+        <div class="contenedor">
             <h2>Encuentra la casa de tus sueños</h2>
             <p>
                 Llena el formulario de Contacto y un asesor se pondrá en contacto
-                contio a la brevedad
+                contigo a la brevedad
             </p>
             <a href="contacto.html" class="boton boton-amarillo">Contáctanos</a>
         </div>
@@ -241,6 +241,9 @@
             <p class="copyright">Todos los Derechos Reservados &copy;</p>
         </div>
     </footer>
-</body>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
+</body> 
 
 </html>
