--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
     </main>
 
-    <section class="imagen-contacto">
+    <section class="contactanos">
         <div class="contenedor">
             <h2>Encuentra la casa de tus sueños</h2>
             <p>
