--- a/nosotros.html
+++ b/nosotros.html
@@ -14,14 +14,14 @@
     <header class="site-header">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <a href="/">
+                <a href="/" class="logo">
                     <img src="img/logo.svg" alt="Logotipo de Bienes Raíces" />
                 </a>
 
-                <div class="mobile-menu">
-                    <a href="#navegacion">
-                        <img src="img/barras.svg" alt="Imagen Menú">
-                    </a>
+                <div class="menu-movil">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
 
                 <nav id="navegacion" class="navegacion">
@@ -31,8 +31,7 @@
                     <a href="contacto.html">Contacto</a>
                 </nav>
             </div>
-        </div>
-        <!-- contenedor -->
+        </div> <!-- contenedor -->  
     </header>
 
     <main class="contenedor">
@@ -107,6 +106,9 @@
             <p class="copyright">Todos los Derechos Reservados &copy;</p>
         </div>
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
