--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         </li>
                     </ul>
 
-                    <a href="#" class="boton boton-amarillo d-block">Ver propiedad</a>
+                    <a href="entrada.html" class="boton boton-amarillo d-block">Ver propiedad</a>
                 </div>
             </div>
 
@@ -132,7 +132,7 @@
                         </li>
                     </ul>
 
-                    <a href="#" class="boton boton-amarillo d-block">Ver propiedad</a>
+                    <a href="entrada.html" class="boton boton-amarillo d-block">Ver propiedad</a>
                 </div>
             </div>
 
@@ -161,7 +161,7 @@
                         </li>
                     </ul>
 
-                    <a href="#" class="boton boton-amarillo d-block">Ver propiedad</a>
+                    <a href="entrada.html" class="boton boton-amarillo d-block">Ver propiedad</a>
                 </div>
             </div>
         </div>
