--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
                 <a href="entrada.html">
                     <h4>Terraza en el techo de tu casa</h4>
                 </a>
-                <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                <p>Escrito el: <span> 20/12/2020 </span> por: <span> Admin </span> </p>
                 <p>
                     Consejos para construir una terraza en el techo de tu casa, con
                     los mejores materiales y ahorrando dinero.
@@ -62,7 +62,7 @@
                 <a href="entrada.html">
                     <h4>Guía para la decoración de tu hogar</h4>
                 </a>
-                <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                <p>Escrito el: <span> 20/12/2020 </span> por: <span> Admin </span> </p>
                 <p>
                     Maximiza el espacio en tu hogar con esta guía, aprende a combinar
                     muebles y colores para darle vida a tu espacio.
@@ -78,7 +78,7 @@
                 <a href="entrada.html">
                     <h4>Guía para la decoración de tu hogar</h4>
                 </a>
-                <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                <p>Escrito el: <span> 20/12/2020 </span> por: <span> Admin </span> </p>
                 <p>
                     Maximiza el espacio en tu hogar con esta guía, aprende a combinar
                     muebles y colores para darle vida a tu espacio.
@@ -94,7 +94,7 @@
                 <a href="entrada.html">
                     <h4>Guía para la decoración de tu hogar</h4>
                 </a>
-                <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                <p>Escrito el: <span> 20/12/2020 </span> por: <span> Admin </span> </p>
                 <p>
                     Maximiza el espacio en tu hogar con esta guía, aprende a combinar
                     muebles y colores para darle vida a tu espacio.
@@ -117,6 +117,7 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 
