--- a/anuncios.html
+++ b/anuncios.html
@@ -51,7 +51,7 @@
                     <ul class="iconos-caracteristicas">
                         <li>
                             <img src="img/icono_wc.svg" alt="icono wc" />
-                            <p>3</p>
+                            <p>4</p>
                         </li>
                         <li>
                             <img src="img/icono_estacionamiento.svg" alt="icono autos" />
@@ -59,7 +59,7 @@
                         </li>
                         <li>
                             <img src="img/icono_dormitorio.svg" alt="icono habitaciones" />
-                            <p>2</p>
+                            <p>4</p>
                         </li>
                     </ul>
 
@@ -104,20 +104,20 @@
                         Casa con alberca y acabados de Lujo en la ciudad, excelente
                         oportunidad
                     </p>
-                    <p class="precio">$3,000,000</p>
+                    <p class="precio">$4,000,000</p>
 
                     <ul class="iconos-caracteristicas">
                         <li>
                             <img src="img/icono_wc.svg" alt="icono wc" />
-                            <p>3</p>
+                            <p>7</p>
                         </li>
                         <li>
                             <img src="img/icono_estacionamiento.svg" alt="icono autos" />
-                            <p>3</p>
+                            <p>4</p>
                         </li>
                         <li>
                             <img src="img/icono_dormitorio.svg" alt="icono habitaciones" />
-                            <p>2</p>
+                            <p>6</p>
                         </li>
                     </ul>
 
@@ -137,7 +137,7 @@
                     <ul class="iconos-caracteristicas">
                         <li>
                             <img src="img/icono_wc.svg" alt="icono wc" />
-                            <p>2</p>
+                            <p>3</p>
                         </li>
                         <li>
                             <img src="img/icono_estacionamiento.svg" alt="icono autos" />
@@ -145,7 +145,7 @@
                         </li>
                         <li>
                             <img src="img/icono_dormitorio.svg" alt="icono habitaciones" />
-                            <p>5</p>
+                            <p>3</p>
                         </li>
                     </ul>
 
@@ -166,15 +166,15 @@
                     <ul class="iconos-caracteristicas">
                         <li>
                             <img src="img/icono_wc.svg" alt="icono wc" />
-                            <p>3</p>
+                            <p>4</p>
                         </li>
                         <li>
                             <img src="img/icono_estacionamiento.svg" alt="icono autos" />
-                            <p>2</p>
+                            <p>3</p>
                         </li>
                         <li>
                             <img src="img/icono_dormitorio.svg" alt="icono habitaciones" />
-                            <p>2</p>
+                            <p>4</p>
                         </li>
                     </ul>
 
@@ -195,15 +195,15 @@
                     <ul class="iconos-caracteristicas">
                         <li>
                             <img src="img/icono_wc.svg" alt="icono wc" />
-                            <p>2</p>
+                            <p>7</p>
                         </li>
                         <li>
                             <img src="img/icono_estacionamiento.svg" alt="icono autos" />
-                            <p>5</p>
+                            <p>4</p>
                         </li>
                         <li>
                             <img src="img/icono_dormitorio.svg" alt="icono habitaciones" />
-                            <p>7</p>
+                            <p>6</p>
                         </li>
                     </ul>
 
@@ -226,6 +226,7 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 
