--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="contacto.html">Contacto</a>
                 </nav>
             </div>
-            <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
+            <h1 class="title">Venta de Casas y Departamentos Exclusivos de Lujo</h1>
         </div> <!-- contenedor -->
     </header>
 
@@ -91,7 +91,7 @@
                     <ul class="iconos-caracteristicas">
                         <li>
                             <img src="img/icono_wc.svg" alt="icono wc" />
-                            <p>3</p>
+                            <p>4</p>
                         </li>
                         <li>
                             <img src="img/icono_estacionamiento.svg" alt="icono autos" />
@@ -99,7 +99,7 @@
                         </li>
                         <li>
                             <img src="img/icono_dormitorio.svg" alt="icono habitaciones" />
-                            <p>2</p>
+                            <p>4</p>
                         </li>
                     </ul>
 
@@ -144,20 +144,20 @@
                         Casa con alberca y acabados de Lujo en la ciudad, excelente
                         oportunidad
                     </p>
-                    <p class="precio">$3,000,000</p>
+                    <p class="precio">$4,000,000</p>
 
                     <ul class="iconos-caracteristicas">
                         <li>
                             <img src="img/icono_wc.svg" alt="icono wc" />
-                            <p>3</p>
+                            <p>7</p>
                         </li>
                         <li>
                             <img src="img/icono_estacionamiento.svg" alt="icono autos" />
-                            <p>3</p>
+                            <p>4</p>
                         </li>
                         <li>
                             <img src="img/icono_dormitorio.svg" alt="icono habitaciones" />
-                            <p>2</p>
+                            <p>6</p>
                         </li>
                     </ul>
 
@@ -172,7 +172,7 @@
     </main>
 
     <section class="contactanos">
-        <div class="contenedor">
+        <div class="contactanos-contenedor contenedor">
             <h2>Encuentra la casa de tus sueños</h2>
             <p>
                 Llena el formulario de Contacto y un asesor se pondrá en contacto
@@ -194,7 +194,7 @@
                     <a href="entrada.html">
                         <h4>Terraza en el techo de tu casa</h4>
                     </a>
-                    <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                    <p>Escrito el: <span> 20/12/2020 </span> por: <span> Admin </span> </p>
                     <p>
                         Consejos para construir una terraza en el techo de tu casa, con
                         los mejores materiales y ahorrando dinero.
@@ -210,7 +210,7 @@
                     <a href="entrada.html">
                         <h4>Guía para la decoración de tu hogar</h4>
                     </a>
-                    <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                    <p>Escrito el: <span> 20/12/2020 </span> por: <span> Admin </span> </p>
                     <p>
                         Maximiza el espacio en tu hogar con esta guía, aprende a combinar
                         muebles y colores para darle vida a tu espacio.
@@ -225,7 +225,7 @@
                 <blockquote>
                     Satisfecho con la atención ofrecida por el personal, muy amena y respetuosa. La casa ofrecida cumple con todas mis expectativas.
                 </blockquote>
-                <p>- Manuel Romero</p>
+                <p>- Pablo Rodríguez</p>
             </div>
         </section>
     </div>
@@ -243,6 +243,7 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.min.js"></script>
     <script src="js/scripts.js"></script>
 </body> 
 
